--- a/solidity-oracle/package.json
+++ b/solidity-oracle/package.json
@@ -13,7 +13,8 @@
     "hardhat": "^2.17.0"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.9.0"
+    "@openzeppelin/contracts": "^4.9.0",
+    "dotenv": "^17.2.1"
   },
   "type": "module"
 }
